# udaq

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml  linux.yml  windows.yml
cmake/: BuildType.cmake  FindLabVIEW.cmake  FindLibUV.cmake  FindVISA.cmake  setup_ide_folders.cmake
common/: CMakeLists.txt
common/include/: bytes.h  debug.h
common/include/udaq/common/: accurate_sleeper.h  debug.h  extern_c.h  file_writer.h  gettimeofday.h  vector.h
common/src/: accurate_sleeper.cpp  bytes.cpp  debug.cpp  file_writer.cpp  gettimeofday.cpp  vector.cpp
devices/: CMakeLists.txt
devices-wrapper/: CMakeLists.txt
devices-wrapper/include/udaq/devices/wrappers/: globals.h  safibra_interrogator.h
devices-wrapper/src/: safibra_interrogator.cpp
devices/include/udaq/devices/: random_wamp.h
devices/include/udaq/devices/safibra/: sensor_readout.h  sigproc_server.h  tcp_client.h
devices/safibra/: CMakeLists.txt
devices/safibra/include/udaq/devices/safibra/: fbg_reading.h  sigproc_server.h
devices/safibra/src/: random_wamp.cpp
devices/safibra/src/safibra/: sigproc_server.cpp  tcp_client.cpp  tcp_client.h  tcp_data_offsets.h  tcp_header.h
devices/src/: random.cpp  random_wamp.cpp
devices/src/safibra/: sigproc_server.cpp  tcp_client.cpp  tcp_client.h  tcp_data_offsets.h  tcp_header.cpp  tcp_header.h  tcp_reading.cpp
doc/: rsvisa.md
external_cmake_wrappers/imgui/: CMakeLists.txt
external_cmake_wrappers/imgui-filebrowser/: CMakeLists.txt
external_cmake_wrappers/imgui/include/: imgui-wrapper.h
external_cmake_wrappers/implot/: CMakeLists.txt
external_cmake_wrappers/uv/: CMakeLists.txt
external_cmake_wrappers/wise_enum/: CMakeLists.txt
gui/: CMakeLists.txt
gui/src/: gui_context.h  karla-font.h  main.cpp
helpers/imgui/: CMakeLists.txt
helpers/imgui/include/udaq/helpers/: imgui.h
helpers/imgui/src/: imgui.cpp
helpers/visa/: CMakeLists.txt
helpers/visa/include/udaq/helpers/: visa.h
helpers/visa/include/udaq/helpers/visa/: conn_options.h  return_codes.h  visa_comm_driver.h  visa_exception.h  visa_instrument.h
helpers/visa/src/: return_codes.cpp
imgui/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/src/: main.cpp
src/hello-world/: CMakeLists.txt
src/libudaq/src/: test.cpp
src/tests/find-resource/src/: main.cpp
src/tests/idn/: CMakeLists.txt
src/tests/idn/src/: main.cpp
src/tools/scpi-simulator/src/: main.cpp
src/udaq/include/: udaq.h
src/udaq/src/: test.cpp
test/: CMakeLists.txt
test/src/: main.cpp
tests/device-wrapper/: CMakeLists.txt
tests/device-wrapper/src/: main.c
tests/find-resource/: CMakeLists.txt
tests/idn/: CMakeLists.txt
tests/idn/src/: main.cpp
tools/safibra-simulator/: CMakeLists.txt
tools/safibra-simulator/src/: main.cpp
tools/scpi-simulator/: CMakeLists.txt
tools/scpi-simulator/src/: main.cpp
udaq/: CMakeLists.txt
udaq/include/udaq/: exception.h  types.h  udaq.h  uris.h
udaq/src/: test.cpp
wrappers/c/: CMakeLists.txt
wrappers/c/include/udaq/wrappers/c/: globals.h  safibra_interrogator.h
wrappers/c/src/: safibra_interrogator.cpp
wrappers/labview-c/: CMakeLists.txt
wrappers/labview-c/include/udaq/wrappers/labview-c/: data_types.h  globals.h  labview-c.h  safibra_interrogator.h
wrappers/labview-c/src/: safibra_interrogator.cpp  utils.cpp  utils.h
